# A3HW

./: CMakeLists.txt  README.md
data/: experiment_results.csv  experiment_results_improved.csv
report/: report.md
scripts/: plot_results.py
src/: hash_func_gen.cpp  hash_func_gen.hpp  hyperloglog.cpp  hyperloglog.hpp  hyperloglog_improved.cpp  hyperloglog_improved.hpp  main.cpp  random_stream_gen.cpp  random_stream_gen.hpp
